--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <title>GCSI - 01</title>
 </head>
 <body>
+  <div class="container">
+    <h1>Calculadora de IMC</h1>
+    <label for="weight">Peso (kg):</label>
+    <input type="number" id="weight" placeholder="Digite o peso" step="0.01">
+    <label for="height">Altura (m):</label>
+    <input type="number" id="height" placeholder="Digite a altura" step="0.01">
+    <button id="calculateBtn">Calcular IMC</button>
+    <div id="result">
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
