--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <div class="container">
     <h1>Calculadora de IMC</h1>
-    <label for="weight">Peso (kg):</label>
+    Peso (kg):
     <input type="number" id="weight" placeholder="Digite o peso" step="0.01">
-    <label for="height">Altura (m):</label>
+    Altura (m):
     <input type="number" id="height" placeholder="Digite a altura" step="0.01">
     <button id="calculateBtn">Calcular IMC</button>
     <div id="result">
