--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <button id="calculateBtn">Calcular IMC</button>
     <div id="result">
     </div>
+    <br/>
+    <img src="images/imc2.png" alt="Imagem de exemplo" width="939" height="275">
   </div>
   <script src="script.js"></script>
 </body>
